--- a/Sample/SampleApp.Android/SampleApp.Android.csproj
+++ b/Sample/SampleApp.Android/SampleApp.Android.csproj
@@ -63,7 +63,7 @@
       <Version>0.10.0</Version>
     </PackageReference>
     <PackageReference Include="CobrowseIO.Xamarin">
-      <Version>3.0.0</Version>
+      <Version>3.1.0-pre01</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
