--- a/CobrowseIO.DotNet.iOS.AppExtension.nuspec
+++ b/CobrowseIO.DotNet.iOS.AppExtension.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>CobrowseIO.DotNet.iOS.AppExtension</id>
-        <version>4.0.0-alpha01</version>
+        <version>4.0.0-alpha04</version>
         <title>CobrowseIO.DotNet.iOS.AppExtension</title>
         <authors>Cobrowse.io</authors>
         <owners>Cobrowse.io</owners>
@@ -23,7 +23,9 @@
     <files>
         <file src="icon.png" target="" />
 
-        <file src="iOS/CobrowseIO.AppExtension.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.AppExtension.*" target="lib/net8.0-ios17.0" />
-        <file src="iOS/CobrowseIO.AppExtension.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.AppExtension.resources/**" target="lib/net8.0-ios17.0" />
+        <file src="iOS/CobrowseIO.AppExtension.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.AppExtension.dll" target="lib/net8.0-ios17.0" />
+        <file src="iOS/CobrowseIO.AppExtension.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.AppExtension.pdb" target="lib/net8.0-ios17.0" />
+        <file src="iOS/CobrowseIO.AppExtension.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.AppExtension.resources.stamp" target="lib\net8.0-ios17.0"/>
+        <file src="iOS/CobrowseIO.AppExtension.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.AppExtension.resources.zip" target="lib/net8.0-ios17.0" />
     </files>
 </package>
